plugins {
	id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = "${project.archives_base_name}-${project.mod_loader}-${project.minecraft_version}"
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
	maven {
		// JEI mod files host
		name = "Jared's maven"
		url = "https://maven.blamejared.com/"
	}
	maven {
		// JEI mod files mirror (as a fallback)
		name = "ModMaven"
		url = "https://modmaven.dev"
	}
	maven {
		// Mod Menu mod files host
		name = "Terraformers"
		url = "https://maven.terraformersmc.com/"
	}
	maven {
		// YACL mod files host
		name = "Xander Maven"
		url = "https://maven.isxander.dev/releases"
	}

	mavenCentral() // Jankson JSON API
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"touristry" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}

}

fabricApi {
	configureDataGeneration {
		client = true
	}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings loom.officialMojangMappings()
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	// Jankson API
	implementation "blue.endless:jankson:1.2.3"
	include "blue.endless:jankson:1.2.3"

	// compile against the JEI API but do not include it at runtime
	modCompileOnly("mezz.jei:jei-${project.minecraft_version}-fabric-api:${project.jei_version}")
	// at runtime, use the full JEI jar for Fabric
	modRuntimeOnly("mezz.jei:jei-${project.minecraft_version}-fabric:${project.jei_version}")

	modCompileOnly("com.terraformersmc:modmenu:${project.modmenu_version}")
	// make available to the dev runtime
	modLocalRuntime("com.terraformersmc:modmenu:${project.modmenu_version}")

	modCompileOnly("dev.isxander:yet-another-config-lib:${project.yacl_version}+${project.minecraft_version}-fabric")
	// make available to the dev runtime
	modLocalRuntime("dev.isxander:yet-another-config-lib:${project.yacl_version}+${project.minecraft_version}-fabric")
}

processResources {
	def version = project.version
	inputs.property "version", version

	filesMatching("fabric.mod.json") {
		expand "version": version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
